feat: menu items endpoints
